--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "Roboto";
+  src: url(./assets/fonts/Roboto-Black.ttf) format("truetype");
+}
+
 /* --------------------------------------------------- Navbar ----------------------------------------*/
 .navBar {
   width: 100%;
