--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,13 @@ main {
   width: 100%;
   text-align: center;
   background-color: white;
+  font-family: "Roboto", sans-serif;
 }
 
 a {
   color: black;
   text-decoration: inherit;
+  font-family: "Roboto", sans-serif;
 }
 a:hover {
   color: grey;
@@ -16,8 +18,8 @@ body {
   margin: 0;
   display: flex;
   justify-content: center;
-  /*place-items: center; Centrer sur la hauteur*/
   background-color: white;
+  width: 100%;
 }
 
 h1 {
