--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 main {
-  width: 100%;
+  width: 150vh;
   text-align: center;
   background-color: white;
   font-family: "Roboto", sans-serif;
@@ -47,6 +47,7 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  color: white;
 }
 button:hover {
   border-color: #646cff;
