--- a/src/App.css
+++ b/src/App.css
@@ -68,22 +68,28 @@
 
 /* --------------------------------------------------- ACCUEIL ----------------------------------------*/
 .accueilContainer {
-  background-color: white;
   margin: 0;
-  min-width: 600px;
+  min-width: 20%;
+  padding: 20px;
 }
 
 .infoAvatar {
+  max-width: 900px;
+  padding: 20px;
   display: flex;
-  justify-content: space-evenly;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  border: solid #5e5e60 3px;
+  margin: 20px;
+  border-radius: 10px;
 }
 
 .blocInfo {
   background-color: rgb(251, 254, 254);
   display: flex;
   flex-direction: column;
-  width: 500px;
+  width: 400px;
   text-align: left;
   justify-content: center;
 }
@@ -98,13 +104,12 @@
 
 .avatar {
   display: flex;
-  justify-content: flex-end;
-  height: 50%;
+  justify-content: center;
 }
 
 .avatar img {
-  width: 60%;
   filter: drop-shadow(10px 7px 10px rgb(182, 182, 182));
+  width: 60%;
 }
 
 .description {
@@ -134,25 +139,33 @@
   min-height: 500px;
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
   margin: 20px;
   border-radius: 10px;
+  padding: 30px;
 }
 
 .titleKaleien {
   width: 100%;
+}
+
+.mobileDesktop {
+  display: flex;
+  flex-direction: row;
 }
 .mobileMockup {
   width: 300px;
 }
 .mobileMockup img {
   filter: drop-shadow(10px 7px 10px rgb(182, 182, 182));
-  width: 80%;
+  width: 50%;
 }
 .deskMockup {
   width: 300px;
+  display: flex;
+  align-items: center;
 }
 .deskMockup img {
   filter: drop-shadow(10px 7px 10px rgb(182, 182, 182));
@@ -160,18 +173,17 @@
 }
 
 .projectDesc {
-  width: 300px;
-  text-align: left;
+  width: 100%;
+  text-align: center;
 }
 
 .logoHardSkill {
   display: flex;
-  width: 300px;
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
 
 .logoHardSkill img {
-  width: 10%;
+  width: 5%;
 }
 
 /* --------------------------------------------------- Contact ----------------------------------------*/
@@ -254,7 +266,7 @@ form {
   }
 
   .accueilContainer {
-    max-width: 600px;
+    max-width: 500px;
   }
 
   .navBar {
@@ -291,6 +303,16 @@ form {
     flex-direction: column;
     padding: 20px;
     gap: 3rem;
+    max-width: 300px;
+  }
+  video {
+    width: 100%;
+    height: 100%;
+  }
+
+  .mobileDesktop {
+    display: flex;
+    flex-direction: column;
   }
 
   form {
@@ -325,7 +347,7 @@ form {
   .infoAvatar {
     flex-direction: row;
     align-items: center;
-    margin-top: 100px;
+    margin: 20px;
   }
 }
 
