--- a/src/App.css
+++ b/src/App.css
@@ -10,13 +10,13 @@
 
 /* --------------------------------------------------- Navbar ----------------------------------------*/
 .navBar {
-  width: 100%;
+  width: 100vw;
   height: 50px;
   display: flex;
   flex-wrap: wrap;
-  margin-top: 2rem;
+  padding-top: 1rem;
   margin-bottom: 2rem;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
 .logoTn {
@@ -69,8 +69,10 @@
 /* --------------------------------------------------- ACCUEIL ----------------------------------------*/
 .accueilContainer {
   margin: 0;
-  min-width: 20%;
   padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .infoAvatar {
