--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,6 @@
-$dark-theme: rgb(40, 40, 40);
+$dark-theme: #202426;
 $font-family: "Roboto", sans-serif;
+$darkgreen: #6c733d;
 
 #root {
   width: 100vw;
@@ -9,8 +10,12 @@ $font-family: "Roboto", sans-serif;
 main {
   text-align: center;
   font-family: $font-family;
-  width: 100vw;
   height: 100%;
+}
+
+.mainContainer {
+  display: flex;
+  justify-content: center;
 }
 
 a {
@@ -29,12 +34,11 @@ body {
 }
 
 h1 {
-  font-size: 2em;
-  line-height: 1.1;
+  color: #6c733d;
 }
 
 h2 {
-  color: #3b3b40;
+  color: #9da65d;
   font-family: "Raleway";
   margin: 0;
 }
@@ -45,6 +49,10 @@ h3 {
 
 .light-theme {
   background-color: $dark-theme;
+}
+
+.light-theme h1 {
+  color: white;
 }
 
 .light-theme main {
@@ -82,6 +90,10 @@ h3 {
 
 .light-theme .blocInfo {
   background-color: $dark-theme;
+}
+
+.light-theme .infoAvatar {
+  background-color: #8c8c88;
 }
 
 .light-theme .myName {
@@ -129,11 +141,15 @@ h3 {
   filter: drop-shadow(2px 2px 3px rgb(255, 255, 255));
 }
 
-.light-theme .linkLogo {
-  filter: drop-shadow(2px 2px 3px rgb(255, 255, 255));
-}
-
 .light-theme .open {
   background-color: $dark-theme;
   color: white;
+}
+
+.light-theme input:checked + label {
+  background: white;
+}
+
+.light-theme label:after {
+  background: #8c8c88;
 }
