--- a/src/style.scss
+++ b/src/style.scss
@@ -138,17 +138,33 @@ h4 {
 
 .light-theme .blocDescription p {
   color: white;
+  background-color: $dark-theme;
 }
 
 .light-theme .description {
   color: white;
 }
 
-.light-theme .descriptionHome {
+.light-theme .descriptionHome1.animate__animated.animate__bounceIn {
+  background-color: $dark-theme;
+}
+
+.light-theme .descriptionHome1 h3 {
+  color: white;
+  background-color: $dark-theme;
+}
+
+.light-theme .technoContainer {
+  background-color: $dark-theme;
+}
+
+.light-theme .technoContainer .technoTitle {
   color: white;
 }
 
-.light-theme h2 {
+.light-theme h2,
+h4,
+p {
   color: white;
 }
 
@@ -255,7 +271,7 @@ h4 {
 .infoAvatar {
   width: 100%;
   height: 100%;
-  padding: 20px;
+  padding: 20px 0px 20px 0px;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -273,6 +289,7 @@ h4 {
 
 .history p {
   text-align: justify;
+  width: 100vw;
 }
 
 .blocInfo {
@@ -343,11 +360,12 @@ h4 {
   color: #5e5e60;
   border-radius: 10px;
   padding: 2rem;
-  width: 600px;
+  width: 80vw;
   min-height: 200px;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 1rem;
   background-color: white;
 }
@@ -363,7 +381,7 @@ h4 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
+  padding: 20px 0px 20px 0px;
   box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
 }
 
@@ -458,7 +476,6 @@ footer {
   justify-content: space-evenly;
   margin: 20px;
   border-radius: 10px;
-  padding: 30px;
 }
 
 .titleKaleien {
@@ -469,22 +486,12 @@ footer {
   display: flex;
   flex-direction: row;
 }
-.mobileMockup {
-  width: 200px;
-}
-.mobileMockup img {
-  filter: drop-shadow(10px 7px 10px rgb(182, 182, 182));
-  width: 30%;
-}
+
 .deskMockup {
   width: 200px;
   display: flex;
   align-items: center;
   justify-content: center;
-}
-.deskMockup img {
-  filter: drop-shadow(10px 7px 10px rgb(182, 182, 182));
-  width: 100%;
 }
 
 .projectDesc {
@@ -534,12 +541,12 @@ footer {
 .work figure figcaption,
 .work figure .info {
   position: absolute;
-  height: 320px;
-  width: 415px;
-  top: -4rem;
+  height: 280px;
+  width: 380px;
+  top: -3rem;
   right: 0.5rem;
   bottom: 0.5rem;
-  left: -3rem;
+  left: -2rem;
   background-color: $darkgreen;
   opacity: 0;
   -webkit-transition: opacity 0.6s ease;
@@ -665,7 +672,7 @@ form {
   }
 
   .navBar {
-    width: 100%;
+    width: 100vw;
     justify-content: center;
     margin: 0;
     padding: 20px 0px 20px 0px;
@@ -798,7 +805,7 @@ label:after {
   left: 1px;
   width: 18px;
   height: 18px;
-  background: #9da65d;
+  background: $blackgreen;
   border-radius: 90px;
   transition: 0.3s;
 }
