--- a/src/style.scss
+++ b/src/style.scss
@@ -16,20 +16,33 @@ $middlegreen: #36d99d;
 $lightgreen: #30f2ab;
 $grey: #3c3c40;
 
+html {
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+
 #root {
   width: 100vw;
   height: 100vh;
+  margin: 0;
+  padding: 0;
 }
 
 main {
   text-align: center;
   font-family: $font-family;
-  height: 100%;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
 }
 
 .mainContainer {
   display: flex;
   justify-content: center;
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -45,6 +58,7 @@ a:hover {
 
 body {
   margin: 0;
+  padding: 0;
   display: flex;
   justify-content: center;
 }
@@ -206,9 +220,10 @@ p {
   width: 100vw;
   height: 30px;
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
-  padding: 1rem 3rem 1rem 3rem;
-  justify-content: space-between;
+  padding: 1rem 0rem 1rem 0rem;
+
   position: fixed;
   top: 0;
   background-color: $blackgreen;
@@ -269,7 +284,7 @@ p {
 }
 
 .infoAvatar {
-  width: 100%;
+  width: 100vw;
   height: 100%;
   padding: 20px 0px 20px 0px;
   display: flex;
@@ -330,7 +345,8 @@ p {
 .blocDescription {
   display: flex;
   flex-direction: row;
-  margin: 20px;
+  margin: 0;
+  padding: 0;
 }
 
 .myName {
@@ -345,6 +361,8 @@ p {
   display: flex;
   justify-content: center;
   margin: 30px 0px 30px 0px;
+  padding: 0;
+  width: 100vw;
 }
 
 .avatar img {
@@ -450,8 +468,7 @@ footer {
 /* --------------------------------------------------- Portfolio ----------------------------------------*/
 
 .portfolioContainer {
-  margin: 0;
-  min-width: 20%;
+  width: 100vw;
   padding: 20px;
   margin-top: 80px;
 }
@@ -463,6 +480,8 @@ footer {
   align-items: center;
   justify-content: center;
   width: 100vw;
+  margin: 0;
+  padding: 0;
 }
 
 .projectContainer {
@@ -678,19 +697,6 @@ form {
     padding: 20px 0px 20px 0px;
   }
 
-  /*.navBar {
-    width: 100vw;
-    height: 30px;
-    display: flex;
-    flex-wrap: wrap;
-    padding: 1rem 3rem 1rem 3rem;
-    justify-content: space-between;
-    position: fixed;
-    top: 0;
-    background-color: #6c733d;
-    z-index: 999;
-  }*/
-
   .menu.closed {
     display: none;
   }
@@ -702,10 +708,11 @@ form {
     top: 60px;
     left: 0;
     background-color: $blackgreen;
-    width: 100%;
+    width: 100vw;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     gap: 5px;
     padding: 5px 0px 5px 0px;
+    margin: 0;
   }
   .menu.open h2 {
     color: #fff;
@@ -730,6 +737,7 @@ form {
     gap: 3rem;
     max-width: 300px;
   }
+
   video {
     width: 100%;
     height: 100%;
@@ -748,6 +756,30 @@ form {
     flex-wrap: wrap;
     justify-content: center;
   }
+
+  .work {
+    height: 100%;
+  }
+  .work .backgroundDesk {
+    width: 150%;
+    margin-left: -50px;
+  }
+
+  .work figure figcaption,
+  .work figure .info {
+    position: absolute;
+    height: 320px;
+    width: 300px;
+    top: -3.5rem;
+    right: 0.5rem;
+    bottom: 0.5rem;
+    left: -2.5rem;
+    background-color: $darkgreen;
+    opacity: 0;
+    -webkit-transition: opacity 0.6s ease;
+    transition: opacity 0.6s ease;
+    border-radius: 5px;
+  }
 }
 
 @media (min-width: 769px) {
@@ -764,7 +796,6 @@ form {
     display: flex;
     height: 100%;
     gap: 3rem;
-    padding-right: 100px;
   }
 
   .menu.open {
